2006-06-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/file.py:
	* lib/gaupol/gtk/dialog/test/test_file.py:
	  Renamed from filechooser.

2006-06-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/encoding-dialog.glade:
	* lib/gaupol/gtk/dialog/about.py:
	* lib/gaupol/gtk/dialog/encoding.py:
	* lib/gaupol/gtk/dialog/filechooser.py:
	* lib/gaupol/gtk/dialog/message.py:
	* lib/gaupol/gtk/dialog/test/test_about.py:
	* lib/gaupol/gtk/dialog/test/test_encoding.py:
	* lib/gaupol/gtk/dialog/test/test_filechooser.py:
	* lib/gaupol/gtk/dialog/test/test_message.py:
	  Cleaned up code.
	  Separated testing.

2006-06-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* lib/gaupol/base/util/wwwlib.py:
	* lib/gaupol/gtk/dialog/debug.py:
	* lib/gaupol/gtk/dialog/test:
	* lib/gaupol/gtk/dialog/test/__init__.py:
	* lib/gaupol/gtk/dialog/test/test_debug.py:
	  Cleaned up code.
	  Separated testing.
	  Fixed debug dialog depending on enchant bug.

2006-06-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/delegate/position.py:
	* lib/gaupol/base/delegate/test/test_edit.py:
	* lib/gaupol/base/delegate/test/test_position.py:
	* lib/gaupol/gtk/delegate/position.py:
	  Cleaned up code.
	  Separated testing.

2006-06-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/fileopen.py:
	* lib/gaupol/base/delegate/find.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/delegate/preview.py:
	* lib/gaupol/base/delegate/test/test_edit.py:
	* lib/gaupol/base/delegate/test/test_filesave.py:
	* lib/gaupol/base/delegate/test/test_find.py:
	* lib/gaupol/base/delegate/test/test_format.py:
	* lib/gaupol/base/file/test/test_determiner.py:
	* lib/gaupol/base/file/test/test_init.py:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/util/test/test_config.py: